<resources>
    <string name="app_name">Employ</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">Sign up </string>
    <string name="app_logo">app_logo</string>
    <string name="about_company">About Company


        SkyzTech Ltd is focused on improving people\'s lives through
        meaningful innovation in the areas of Technology solutions</string>
    <string name="about_app">Employ is an app, maintained and run by SkyzTech Ltd
        for general maintenance of equipments/electrical and repair
        works for home office and buildings. we have skilled and qualified painters,
        repair flooring, and plumbers, electricians, air conditioning and heating repair and maintenance and other tasks </string>
    <string name="welcome">Welcome</string>
    <string name="our_services">Our services</string>
</resources>
